--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,8 @@
 </head>
 <body>
    <form action="./Recipe/index.html">
-    <button type="submit" name="q" value="burger">submit</button>
+    <button type="submit" name="q" value="52807">submit</button>
    </form>
 </body>
 <script src="script.js"></script>
-</html> -->
+</html>
