--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Food Recipe</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Jacques Francois Shadow:wght@400&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kavoon:wght@400&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim:wght@400&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inria Sans:wght@400&display=swap" />
 </head>
+
 <body>
-   <form action="./Recipe/index.html">
-    <button type="submit" name="q" value="52807">submit</button>
-   </form>
+    <div class="blank_page">
+        <div class="working_area">
+            <nav>
+                <h1>The Food Recipe</h1>
+                <input type="text" placeholder="Search your meal">
+                <div class="links">
+                    <a href="#">Contact Us</a>
+                </div>
+            </nav>
+            <main>
+                <div class="main_left">
+                    <div class="title">
+                        <h1>
+                            The
+                        </h1>
+                        <h1>
+                            Food
+                        </h1>
+                        <h1>
+                            Recipe
+                        </h1>
+                    </div>
+                </div>
+                <div class="main_right">
+                    <div></div>
+                    <div class="btn">
+                        <a href="./Explore/index.html">
+                            EXPLORE
+                        </a>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
 </body>
 <script src="script.js"></script>
+
 </html>
