--- a/public/Explore/index.html
+++ b/public/Explore/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="./../../gif/MpOx.gif" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Baloo+2&family=Caprasimo&family=Poppins&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Explore</title>
 </head>
+
 <body>
-    
+    <div class="blank_page">
+        <div class="workingArea">
+            <div class="layer_1">
+                <nav>
+                    <div class="nav_left">
+                        <div class="logo">Kaju</div>
+                    </div>
+                    <div class="nav_center">
+                        <input type="text" name="" id="" placeholder=" 😋 Search your Meal 🍴">
+                    </div>
+                    <div class="nav_right">
+                        <a href="#">about</a>
+                        <a href="#">contact us</a>
+                    </div>
+                </nav>
+                <main>
+                    <div class="categories">
+                        <h2 class="heading2">select a category</h2>
+                        <div class="cards">
+                            <!-- <div class="card card-left">
+                                <div class="elem-left">
+                                    <img class="live_img" src="https://www.themealdb.com/images/category/beef.png" alt="">
+                                </div>
+                                <div class="elem-right">
+                                    <h2 class="titles">Beef</h2>
+                                    <p class="discription">Beef is the culinary name for meat from cattle, particularly skeletal muscle.
+                                        Humans have been eating beef since prehistoric times.[1] Beef is a source of
+                                        high-quality protein and essential nutrients.[2]</p>
+                                </div>
+                            </div>
+                            <div class="card card-right">
+                                <div class="elem-left">
+                                    <img class="live_img" src="https://www.themealdb.com/images/category/beef.png" alt="">
+                                </div>
+                                <div class="elem-right">
+                                    <h2 class="titles">Beef</h2>
+                                    <p class="discription">Beef is the culinary name for meat from cattle, particularly skeletal muscle.
+                                        Humans have been eating beef since prehistoric times.[1] Beef is a source of
+                                        high-quality protein and essential nutrients.[2]</p>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </div>
+    </div>
 </body>
+
+<script src="script.js"></script>
+
 </html>
